# sgcc-alert

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README.zh.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  settings.py  settings_local.py.template
homeassistant_config/: configuration.yaml
sgcc_alert/: acquisition_service.py  app.py  conf.py  constants.py  controllers.py  exceptions.py  load_utils.py  log.py  notch_service.py  routes.py  schemes.py  tasks.py  tracing.py  web_page_service.py
sgcc_alert/core/services/: acquisition_service.py  login_service.py  notch_service.py  query_service.py
sgcc_alert/core/utils/: common.py  load.py
sgcc_alert/core/utils/page_action/: __init__.py  balance.py  common.py  daily_usage_history.py  monthly_usage_history.py  residents.py
sgcc_alert/databases/: __init__.py  models.py  session.py
sgcc_alert/docs/: swagger.yml  swagger_page.yml
sgcc_alert/page_utils/: __init__.py  balance.py  common.py  daily_usage_history.py  login.py  monthly_usage_history.py  residents.py
sgcc_alert/static/assets/: scripts.js
sgcc_alert/templates/: dashboard.html  dashboard_bak.html
tests/: __init__.py
tests/mock_data/: captcha_chartreux.json  captcha_cherry_donut.json  captcha_notes.json
tests/unittest/: test_notch_service.py
