[tool.poetry]
name = "sgcc-alert"
version = "0.0.1"
description = "Alert for personal SGCC usage"
authors = ["usharerose <ushareroses@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
numpy = "2.1.3"
opencv-python = "4.10.0.84"
pillow = "10.4.0"
playwright = "1.49.0"
SQLAlchemy = "2.0.28"

[tool.poetry.group.dev.dependencies]
flake8 = ">=7.1,<8"
ipython = ">=8.19.0,<9"
mypy = ">=1.13,<2"
pytest = ">=8.3,<9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
